apps/filebrowser/filebrowser-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: localhost:32000/filebrowser
          args:
            - --noauth
            - --database
            - "/database/workingdir/database.db"
            - --port
            - "3000"
          ports:
            - name: filebrowser
              containerPort: 3000
          volumeMounts:
            - name: aria2
              subPath: watchdir
              mountPath: /srv/downloads/watchdir/aria2
            - name: sabnzbd
              subPath: downloads
              mountPath: /srv/downloads/sabnzbd
            - name: aria2
              subPath: downloads
              mountPath: /srv/downloads/aria2
            - name: sabnzbd
              subPath: downloads
              mountPath: /srv/downloads/watchdir/nzb
            - name: perso
              mountPath: /srv/perso
            - name: public
              mountPath: /srv/public
            - name: filebrowser
              subPath: workingdir
              mountPath: /database/workingdir
      volumes:
        - name: sabnzbd
          persistentVolumeClaim:
            claimName: sabnzbd
        - name: aria2
          persistentVolumeClaim:
            claimName: aria2
        - name: perso
          persistentVolumeClaim:
            claimName: perso
        - name: public
          persistentVolumeClaim:
            claimName: public
        - name: filebrowser
          persistentVolumeClaim:
            claimName: filebrowser
