apps/filebrowser/filebrowser-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  type: ClusterIP
  selector:
    app: filebrowser
  ports:
    - name: filebrowser
      port: 3000
      targetPort: 3000
