apps/filebrowser/filebrowser-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ext
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0m
  labels:
    type: external
    authentified: "true"
spec:
  tls:
    - hosts:
        - files.former-hostname.com
      secretName: files.former-hostname.com
  rules:
    - host: files.former-hostname.com
      http:
        paths:
          - backend:
              service:
                name: filebrowser
                port:
                  number: 3000
            path: /
            pathType: Prefix
